<resources>
    <string name="app_name">Chatify</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_cilogin">CILoginActivity</string>
    <string name="login_fullname">FULL NAME</string>
    <string name="login_mobile_number">MOBILE NUMBER</string>
    <string name="verifying">Verifying...</string>
    <string name="login_error_fill_fullname">Please fill your fullname</string>
    <string name="login_error_fill_phonenumber">Please fill your phone number</string>
    <string name="title_activity_ciprofile">CIProfileActivity</string>
    <string name="title_activity_cimain">@string/app_name</string>
    <string name="common_progress_title_loading">Loading...</string>
    <string name="sidemenu_home">Home</string>
    <string name="sidemenu_account">Account</string>
    <string name="sidemenu_tell_a_friend">Tell A Friend</string>
    <string name="sidemenu_tag_your_business">Tag your business</string>
    <string name="sidemenu_send_your_feedback">Feedback</string>
    <string name="sidemenu_about_chatify">About Chatify</string>
    <string name="font_roboto_thin">fonts/Roboto-Thin.ttf</string>
    <string name="font_roboto_light">fonts/Roboto-Light.ttf</string>
    <string name="font_roboto_regular">fonts/Roboto-Regular.ttf</string>
    <string name="font_roboto_medium">fonts/Roboto-Medium.ttf</string>
    <string name="font_roboto_bold">fonts/Roboto-Bold.ttf</string>
    <string name="font_roboto_black">fonts/Roboto-Black.ttf</string>
    <string name="tag_business_category">Category</string>
    <string name="tag_business_bussiness_name">BUSINESS NAME</string>
    <string name="tag_business_email">EMAIL</string>
    <string name="tag_business_phone">PHONE</string>
    <string name="tag_business_street">STREET</string>
    <string name="tag_business_town">TOWN</string>
    <string name="tag_business_city">CITY</string>
    <string name="tag_business_state">STATE</string>
    <string name="tag_business_country">COUNTRY</string>
    <string name="tag_business_send">Send</string>
    <string name="tag_business_clear">Clear All</string>
    <string name="tag_business_vcard_save_error">Couldn\'t tag your business. please try again later!</string>
    <string name="tag_business_vcard_save_success">We received your tagged business, we will review your business and get back soon!</string>
    <string name="share">Share</string>
    <string name="share_on_facebook">Share on Facebook</string>
    <string name="share_on_twitter">Share on Twitter</string>
    <string name="account_profile">Profile</string>
    <string name="account_setting">Settings</string>
    <string name="account_setting_notifications">Notifications</string>
    <string name="account_setting_sound">Sound</string>
    <string name="account_account">Account</string>
    <string name="account_account_delete_account">Delete Account</string>
    <string name="chat_business">Business</string>
    <string name="chat_customer">Customer</string>
    <string name="chat_hint_enter_your_message">Enter your message here.</string>
    <string name="contactus_fullname">FULL NAME</string>
    <string name="contactus_email">EMAIL</string>
    <string name="contactus_phone_number">PHONE NUMBER</string>
    <string name="contactus_subject">SUBJECT</string>
    <string name="contactus_reason">REASON</string>
    <string name="contactus_yourmessage">YOUR MESSAGE</string>
    <string name="businessdetail_share">Share</string>


    <string name="mtm_accept_cert">Accept Unknown Certificate?</string>
    <string name="mtm_trust_anchor">The server certificate is not signed by a known Certificate Authority.</string>
    <string name="mtm_cert_expired">The server certificate is expired.</string>
    <string name="mtm_accept_servername">Accept Mismatching Server Name?</string>
    <string name="mtm_hostname_mismatch">Server could not authenticate as \&quot;%s\&quot;. The certificate is only valid for:</string>

    <string name="mtm_connect_anyway">Do you want to connect anyway?</string>
    <string name="mtm_cert_details">Certificate details:</string>

    <string name="mtm_decision_always">Always</string>
    <string name="mtm_decision_once">Once</string>
    <string name="mtm_decision_abort">Abort</string>

    <string name="mtm_notification">Certificate Verification</string>
    <string name="title_activity_cibusiness_detail">CIBusinessDetailActivity</string>

    <string name="chat_photo_library">Photo Library</string>
    <string name="chat_take_photo">Take Photo</string>
    <string name="chat_share_location">Share Location</string>
    <string name="gcm_defaultSenderId">56270197764</string>
    <string name="street">Street</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="town">Town</string>
    <string name="landline">Landline</string>
    <string name="fullname">Full Name</string>
    <string name="phonenumber">Phone Number</string>
    <string name="NoRecent">No recent</string>

    <!--<string name="AUTHENTICATION_FAILED">AUTHENTICATION_FAILED</string>-->
    <!--<string name="NOT_CONNECTED">NOT_CONNECTED</string>-->
    <!--<string name="EMPTY_USER_NAME">EMPTY_USER_NAME</string>-->
    <!--<string name="EMPTY_SERVER_NAME">EMPTY_SERVER_NAME</string>-->
    <!--<string name="ACCOUNT_REGISTER_FAILED">ACCOUNT_REGISTER_FAILED</string>-->
    <!--<string name="INCORRECT_USER_NAME">INCORRECT_USER_NAME</string>-->
</resources>
