<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingPrefix"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="@dimen/common_padding_large"
        android:layout_marginRight="@dimen/common_padding_large"
        android:background="@color/darkgray_color"></LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/common_padding_small2"
            android:src="@mipmap/ic_share_facebook"
            android:layout_gravity="center_vertical"/>

        <android.support.v7.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginRight="@dimen/common_padding_large1"
            android:gravity="center_vertical"
            android:text="@string/share_on_facebook"
            android:id="@+id/btShareFacebook"
            android:textColor="@color/darkgray_color"
            android:background="@color/white"
            android:textSize="@dimen/font_medium"
            android:textAllCaps="false"
            fontPath="@string/font_roboto_regular"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0.5px"
        android:layout_marginLeft="@dimen/common_padding_large"
        android:layout_marginRight="@dimen/common_padding_large"
        android:background="@color/darkgray_color"></LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="80dp"
            android:layout_marginLeft="@dimen/common_padding_small2"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_share_twitter"
            android:layout_gravity="center_vertical" />

        <android.support.v7.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginRight="@dimen/common_padding_large1"
            android:gravity="center_vertical"
            android:text="@string/share_on_twitter"
            android:id="@+id/btShareTwitter"
            android:textColor="@color/darkgray_color"
            android:background="@color/white"
            android:textSize="@dimen/font_medium"
            android:textAllCaps="false"
            fontPath="@string/font_roboto_regular"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0.5px"
        android:layout_marginLeft="@dimen/common_padding_large"
        android:layout_marginRight="@dimen/common_padding_large"
        android:background="@color/darkgray_color"></LinearLayout>
</LinearLayout>