<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:ignore="MissingPrefix"
    tools:context="im.chatify.page.business.CIBusinessDetailActivity">

    <FrameLayout
        android:id="@+id/flPicture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.gpit.android.ui.common.AspectRatioImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/imageView"
            app:ratio_by_width="true"
            android:src="@mipmap/ic_back_coffe"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:background="@color/black_translucent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/common_padding_medium">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Central Cafe"
                    android:textColor="@color/white"
                    android:id="@+id/tvName"
                    android:textSize="@dimen/font_large"
                    android:ellipsize="end"
                    android:maxLines="1"
                    fontPath="@string/font_roboto_regular"/>

                <TextView
                    android:layout_below="@id/tvName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/common_padding_small1"
                    android:text="20% OFF ANY PURCHASE"
                    android:textColor="@color/white"
                    android:id="@+id/tvHint"
                    android:textSize="@dimen/font_medium"
                    android:ellipsize="end"
                    android:maxLines="1"
                    fontPath="@string/font_roboto_light"/>
            </RelativeLayout>
        </LinearLayout>

    </FrameLayout>

    <LinearLayout
        android:id="@+id/llChat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/flPicture"
        android:layout_marginTop="-30dp"
        android:layout_alignParentRight="true"
        android:gravity="center"
        android:background="@mipmap/ic_btn_establish_chat">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:layout_gravity="center"
            android:src="@mipmap/ic_business_chat"/>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rlDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/flPicture">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/common_padding_medium"
            android:text="Valid From 23rd Jul to 23th Aug"
            android:textColor="@color/dark_gray"
            android:id="@+id/tvDescription1"
            android:textSize="@dimen/font_medium"
            android:ellipsize="end"
            android:maxLines="1"
            fontPath="@string/font_roboto_light"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/common_padding_medium"
            android:paddingRight="@dimen/common_padding_medium"
            android:layout_below="@id/tvDescription1"
            android:text="Central Plaza is celebrating its annual summer fest. Join us this summer in making it yet another successful season. Hurry! Limited offer only. Grab your share of the sale soon!"
            android:textColor="@color/dark_gray"
            android:id="@+id/tvDescription2"
            android:textSize="@dimen/font_medium"
            android:ellipsize="end"
            fontPath="@string/font_roboto_regular"/>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/llLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_padding_medium2"
        android:layout_below="@id/rlDesc"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/dark_gray"></View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_padding_small1"
            android:layout_marginBottom="@dimen/common_padding_small1"
            android:orientation="horizontal"
            android:padding="@dimen/common_padding_medium">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@mipmap/ic_businessdetail_location"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingLeft="@dimen/common_padding_medium"
                android:paddingRight="@dimen/common_padding_medium"
                android:layout_below="@id/tvDescription1"
                android:text="Upton Park, London"
                android:textColor="@color/dark_gray"
                android:textSize="@dimen/font_medium"
                android:ellipsize="end"
                fontPath="@string/font_roboto_regular"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/dark_gray"></View>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/llLocation"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_padding_small1"
            android:layout_marginBottom="@dimen/common_padding_small1"
            android:orientation="horizontal"
            android:padding="@dimen/common_padding_medium">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:src="@mipmap/ic_businessdetail_share"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingLeft="@dimen/common_padding_medium"
                android:paddingRight="@dimen/common_padding_medium"
                android:layout_below="@id/tvDescription1"
                android:text="@string/businessdetail_share"
                android:textColor="@color/dark_gray"
                android:textSize="@dimen/font_medium"
                android:ellipsize="end"
                fontPath="@string/font_roboto_regular"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/dark_gray"></View>

    </LinearLayout>

</RelativeLayout>
